# riyadh-metro-assistant

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
old_data/: KAFD_rules.json  alnasr.txt  ticketing_data.json
repository/: index.html  main.py
repository/data/: amenities.json  football_data.json  riyadh_knowledgebase.txt
repository/modules/: engine.py  prompts.py  tools.py  utils.py
