[project]
name = "pharmacy-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.12",
    "docx2txt>=0.9",
    "dotenv>=0.9.9",
    "fastapi>=0.115.9",
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.63",
    "langchain-openai>=0.3.19",
    "langgraph>=0.4.8",
]
